# freedesktop-categories

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  update.sh
.circleci/: config.yml
codegen/: Cargo.toml
codegen/src/: error.rs  generate.rs  lib.rs
src/: lib.rs  map.rs
