[package]
name = "freedesktop-categories"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]

[features]
default = []
generate-map = ["freedesktop-categories-codegen"]

[dependencies]
phf = "0.7.22"

[build-dependencies.freedesktop-categories-codegen]
version = "0.1.0"
path = "./codegen"
optional = true
