[package]
name = "freedesktop-categories-codegen"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Parser and code generator for freedesktop-categories"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/freedesktop-categories"
repository = "https://github.com/ebkalderon/freedesktop-categories"
documentation = "https://docs.rs/freedesktop-categories-codegen"
categories = ["parser-implementations", "development-tools::build-utils"]
keywords = ["freedesktop", "menu", "categories", "codegen"]

[badges]
circle-ci = { repository = "ebkalderon/freedesktop-categories" }
maintenance = { status = "passively-maintained" }

[dependencies]
amxml = "0.5.3"
chrono = "0.4.6"
curl = "0.4.19"
phf_codegen = "0.7.24"
